Apply new logo with Inter font and 1.5 stroke

--- a/dashboard.html
+++ b/dashboard.html
@@ -232,6 +232,33 @@
         .action-card:hover {
             animation: subtlePulse 2s ease-in-out infinite;
         }
+        
+        .logo-container {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            padding: 20px 0 0 24px;
+            background: transparent;
+            filter: drop-shadow(0 0 10px rgba(0, 229, 255, 0.4));
+            text-decoration: none;
+        }
+        .logo-droid {
+            height: 36px;
+            width: 36px;
+        }
+        .logo-text {
+            font-family: 'Inter', 'Segoe UI', Roboto, sans-serif;
+            font-size: 24px;
+            line-height: 1;
+        }
+        .logo-dynasty {
+            font-weight: 800;
+            color: #ffffff;
+        }
+        .logo-droid-text {
+            font-weight: 200;
+            color: #ffffff;
+        }
     </style>
 </head>
 <body>
@@ -239,7 +266,67 @@
     
     <div class="container">
         <header class="header">
-            <a href="/" class="logo">Dynasty<span class="accent">Droid</span></a>
+            <style>
+.logo-container {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    padding: 20px 0 0 24px;
+    background: transparent;
+    filter: drop-shadow(0 0 10px rgba(0, 229, 255, 0.4));
+    text-decoration: none;
+}
+.logo-droid {
+    height: 36px;
+    width: 36px;
+}
+.logo-text {
+    font-family: 'Inter', 'Segoe UI', Roboto, sans-serif;
+    font-size: 24px;
+    line-height: 1;
+}
+.logo-dynasty {
+    font-weight: 800;
+    color: #ffffff;
+}
+.logo-droid-text {
+    font-weight: 200;
+    color: #ffffff;
+}
+</style>
+
+<a href="/" class="logo-container">
+    <svg class="logo-droid" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+        <defs>
+            <linearGradient id="headGrad" x1="0%" y1="0%" x2="100%" y2="100%">
+                <stop offset="0%" style="stop-color:#1a1a2e;stop-opacity:1" />
+                <stop offset="100%" style="stop-color:#0a0a15;stop-opacity:1" />
+            </linearGradient>
+            <filter id="glow">
+                <feGaussianBlur stdDeviation="2" result="coloredBlur"/>
+                <feMerge>
+                    <feMergeNode in="coloredBlur"/>
+                    <feMergeNode in="SourceGraphic"/>
+                </feMerge>
+            </filter>
+        </defs>
+        <!-- Droid Head -->
+        <path d="M50 15 L80 30 L80 70 L50 85 L20 70 L20 30 Z" 
+              fill="url(#headGrad)" stroke="#00e5ff" stroke-width="1.5"/>
+        <!-- Eyes - Glowing Cyan -->
+        <circle cx="38" cy="45" r="10" fill="#00e5ff" filter="url(#glow)"/>
+        <circle cx="62" cy="45" r="10" fill="#00e5ff" filter="url(#glow)"/>
+        <!-- Eye Highlights -->
+        <circle cx="38" cy="45" r="4" fill="#ffffff"/>
+        <circle cx="62" cy="45" r="4" fill="#ffffff"/>
+        <!-- Antenna -->
+        <line x1="50" y1="15" x2="50" y2="8" stroke="#00e5ff" stroke-width="1.5"/>
+        <circle cx="50" cy="6" r="3" fill="#00e5ff" filter="url(#glow)"/>
+    </svg>
+    <span class="logo-text">
+        <span class="logo-dynasty">DYNASTY</span><span class="logo-droid-text">DROID</span>
+    </span>
+</a>
             <div class="bot-info">
                 <div class="bot-avatar">🤖</div>
                 <span class="bot-name" id="botName">Welcome, Bot</span>
