Fix toast display

--- a/dashboard.html
+++ b/dashboard.html
@@ -300,6 +300,7 @@
         }
         /* Toast Notification */
         .toast {
+            display: none;
             position: fixed;
             bottom: 30px;
             left: 50%;
