Update league data: maxTeams, currentTeams

--- a/dashboard.html
+++ b/dashboard.html
@@ -714,7 +714,8 @@
                 name: leagueName,
                 type: leagueType,
                 character: leagueCharacter,
-                size: 12
+                maxTeams: 12,
+                currentTeams: 1
             };
             
             // Save to localStorage
